@@ -21,15 +21,13 @@
 
 #include <math.h> // defines PI
 #include "display.hh"
+#include "screen.hh"
 #include "client.hh"
 #include "game.hh"
 #include "highscore.hh"
 #include "ConsoleSource/CON_console.h"
 #include "ConsoleSource/DT_drawtext.h"
-#include "motion.hh"
 
-
-#include "screen.hh"
 /* **********************************************************************
  * The global display
  * *********************************************************************/
@@ -49,94 +47,6 @@ void TDisplay::Render(SDL_Surface * surface) {
     (*i)->Render(surface);
   }
 
-  TEntity * paddle = GameState->MapState->GetPaddle();
-
-  SDL_Event event;
-  while (SDL_PollEvent(&event)) {
-    switch (event.type) {
-    case SDL_KEYDOWN:
-      switch (event.key.keysym.sym) {
-      case SDLK_LEFT:
-	if (!paddle) break;
-	paddle->getMotion()->setVelocity( -0.5 );
-	dynamic_cast<TFreeMotion*>(paddle->getMotion())->setDir( 0 );
-      break;
-      case SDLK_RIGHT:
-	if (!paddle) break;
-	paddle->getMotion()->setVelocity( 0.5 );
-	dynamic_cast<TFreeMotion*>(paddle->getMotion())->setDir( 0 );
-      break;
-      case SDLK_UP:
-	if (!paddle) break;
-	paddle->getMotion()->setVelocity( 0.5 );
-	dynamic_cast<TFreeMotion*>(paddle->getMotion())->setDir( M_PI_2 );	
-	break;
-      case SDLK_DOWN:
-	if (!paddle) break;
-	paddle->getMotion()->setVelocity( 0.5 );
-	dynamic_cast<TFreeMotion*>(paddle->getMotion())->setDir( -M_PI_2 );
-	break;
-      case SDLK_ESCAPE:	
-	QuitClient = true;
-	break;
-      case SDLK_BACKQUOTE:
-      case SDLK_F1:
-      case SDLK_F3:
-	if (!ConsoleDown){
-	  ConsoleDown = true;
-	  SDL_EnableUNICODE(1);
-	} else {
-	  ConsoleDown = false;
-	  SDL_EnableUNICODE(0);
-	}
-	return;
-      case SDLK_F11:
-	SDL_Surface * tmp; 
-	if (SDL_FULLSCREEN & Screen->flags) {
-	  tmp = SDL_SetVideoMode(Screen->w, Screen->h, 0,
-				 SDL_HWSURFACE | SDL_DOUBLEBUF);
-	} else {
-	  tmp = SDL_SetVideoMode(Screen->w, Screen->h, 0,
-				 SDL_HWSURFACE | SDL_DOUBLEBUF 
-				 | SDL_FULLSCREEN);
-	}
-	if (tmp) {
-	  SDL_FreeSurface(Screen);
-	  Screen = tmp;
-	}
-	break;
-      default:
-	break;
-      }
-      break;
-    case SDL_KEYUP:
-      switch (event.key.keysym.sym) {
-      case SDLK_LEFT:
-	if (!paddle) break;
-	paddle->getMotion()->setVelocity( 0.0 );
-	break;
-      case SDLK_RIGHT:
-	if (!paddle) break;
-	paddle->getMotion()->setVelocity( 0.0 );
-	break;
-      case SDLK_UP:
-	if (!paddle) break;
-	paddle->getMotion()->setVelocity( 0.0 );
-	break;
-      case SDLK_DOWN:
-	if (!paddle) break;
-	paddle->getMotion()->setVelocity( 0.0 );
-	break;
-      }
-    default:
-      break;
-    }
-    /* If the console is down send events that were not
-     * filtered out yet to the console */
-    if (ConsoleDown) {
-      CON_ConsoleEvents(&event);
-    }
-  }
   
   // Draw highscore if necessary
   Highscore->Render(surface);
