@@ -21,3 +21,4 @@
 #include "screen.hh"
 SDL_Surface * Screen = NULL;
 SDL_Surface * Splash = NULL;
+bool ConsoleDown = false;
